# Mes_learn_opengl

./: .clang-format  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/shader/: CMakeLists.txt  read_shader.cpp  rgb.cpp  uniform.cpp
project/shader/header/include/: shader.h
project/shader/header/src/: shader.cpp
project/shader/shader_code/: shader.frag  shader.vert
project/triangle/: CMakeLists.txt  main.cpp
